# klako

./: .gitignore  .kla.example.json  KLA.md  PARITY.md  README.md  ROADMAP.md  parse_test.rs  rename_kla2.py
.kla/skills/: probabilistic_programming.md  sports_analytics.md  technical_design.md
notebook-ui/: app.js  index.html  package-lock.json  package.json  style.css  test.html  test.js  vitest.config.ts
notebook-ui/src/: App.tsx  index.css
notebook-ui/src/components/panes/: MapPane.tsx  ReviewPane.test.tsx  ReviewPane.tsx  SprintBoard.test.tsx  SprintBoard.tsx
notebook-ui/src/providers/: useWebSocket.ts
notebook-ui/src/store/: useStore.test.ts  useStore.ts
rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  test_serde.rs
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  error.rs  lib.rs  normalization_tests.rs  router.rs  router_mocks.rs  router_tests.rs  types.rs
rust/crates/api/src/context/: estimator.rs  manager.rs  mod.rs  vector.rs
rust/crates/api/src/providers/: kla_provider.rs  mod.rs  openai_compat.rs
rust/crates/api/src/providers/openai/: client.rs  mod.rs  normalization.rs  parser.rs  translator.rs  types.rs
rust/crates/api/tests/: client_integration.rs  local_escalation.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/commands/src/: discovery.rs  git.rs  lib.rs  plugins_cmd.rs  slash.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/kla-cli/: Cargo.toml
rust/crates/kla-cli/src/: app.rs  args.rs  auth.rs  git.rs  init.rs  input.rs  main.rs  notebook.rs  render.rs  reporting.rs  runtime_bridge.rs  security_module.rs  session.rs
rust/crates/kla-cli/src/bridge/: client.rs  executor.rs  helpers.rs  mod.rs  progress.rs  prompter.rs
rust/crates/kla-cli/src/repl/: mod.rs  notebook.rs  prompter.rs
rust/crates/kla-cli/src/repl/cmds/: agent.rs  cost.rs  design.rs  map.rs  misc.rs  mod.rs  registry.rs  retro.rs  review.rs  rewind.rs  session.rs  status.rs  swarm.rs
rust/crates/lsp/src/: client.rs
rust/crates/plugins/src/: hooks.rs  install.rs  lib.rs  lib_tests.rs  manager.rs
rust/crates/runtime/: Cargo.toml  parse_test.rs
rust/crates/runtime/src/: axiom.rs  bash.rs  bootstrap.rs  config.rs  config_tests.rs  conversation.rs  file_ops.rs  index.rs  lib.rs  mcp_stdio.rs  mcp_stdio_tests.rs  oauth.rs  permissions.rs  prompt.rs  remote.rs  sandbox.rs  usage.rs
rust/crates/runtime/src/sandbox/: b4mal.rs  reaper.rs  trytet_jail.rs  worktree.rs
rust/crates/runtime/src/workspace/: checkpoint.rs
rust/crates/runtime/tests/: config_parse_test.rs  debug_pty.rs  persistent_shell_sandbox.rs
rust/crates/swarm/: Cargo.toml
rust/crates/swarm/src/: lib.rs
rust/crates/swarm/tests/: orchestrator_test.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: agent.rs  config.rs  dispatch.rs  lib.rs  lib_tests.rs  misc.rs  notebook.rs  tests.rs  web.rs
rust/crates/tools/src/render/: terminal.rs
rust/crates/tools/src/test_skills/skills/help/: SKILL.md
rust/crates/tools/src/worlds/: core.rs  discovery.rs  mod.rs  parity.rs  symbols.rs
rust/crates/tools/tests/: core_worlds_test.rs  discovery_world_test.rs  parity_world_test.rs  symbol_world_test.rs
rust/docs/releases/: 0.1.0.md
src/: __init__.py  context.py  main.py  parity_audit.py  projectOnboardingState.py
src/reference_data/: archive_surface_snapshot.json  commands_snapshot.json  tools_snapshot.json
src/reference_data/subsystems/: components.json  services.json  skills.json  types.json
