[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
lsp = { path = "../lsp" }
plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"
libc = "0.2.184"
nix = { version = "0.31.2", features = ["signal"] }
dirs = "6.0.0"
wasmtime = "18.0"
fs2 = "0.4.3"
async-trait = "0.1.89"
rusqlite = { version = "0.39.0", features = ["bundled"] }
notify = "8.2.0"
dyn-clone = "1.0.20"
schemars = "1.2.1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
