[package]
name = "swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
tools = { path = "../tools" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
async-trait = "0.1"
tokio-util = { version = "0.7.18", features = ["rt"] }
dyn-clone = "1.0.20"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
