[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
rand = "0.8"
regex = "1.12.3"
walkdir = "2.5.0"
schemars = { version = "1.2.1", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
async-trait = "0.1.89"
tokio-util = { version = "0.7.18", features = ["rt"] }

[lints]
workspace = true

[dev-dependencies]
proptest = "1.11.0"
